feat: note label integration
